fix layout misalignment

--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -63,7 +63,6 @@ svg, svg g {
 .sidenote {
   font-size: 0.75em;
   color: $grey;
-  // font-family: $monospace;
-  margin-top: 0.38em;
+  margin-top: 0.35em;
 
 }
